<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_matches"
        android:icon="@drawable/ic_trophy"
        android:title="@string/title_matches" />

    <item
        android:id="@+id/navigation_teams"
        android:icon="@drawable/ic_callendar"
        android:title="@string/title_teams" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_star_outlined"
        android:title="@string/title_favorite" />

</menu>
